# kensa

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  pr-labels.yml  release.yml  security.yml
docs/: README.md  assertions.mdx  cases.mdx  changelog.mdx  ci.mdx  cli.mdx  concepts.mdx  docs.json  introduction.mdx  judge.mdx  pytest.mdx  quickstart.mdx  skills.mdx  style.css  tracing.mdx
examples/basic/tests/evals/: conftest.py  test_refund_policy.py
scripts/: release.sh
src/kensa/: __init__.py  _serialization.py  _smoke.py  artifacts.py  case.py  cli.py  cli_inspect.py  cli_output.py  cli_traces.py  config.py  constants.py  conversation.py  errors.py  judge.py  llm.py  models.py  pytest.py  pytest_plugin.py  redact.py  runtime.py  scoring.py  traces.py  tracing.py  watchdog.py
src/kensa/providers/: __init__.py  langfuse.py
src/kensa/skill_templates/kensa-diagnose/: SKILL.md
src/kensa/skill_templates/kensa-evals/: SKILL.md
src/kensa/skill_templates/kensa-generate/: SKILL.md
src/kensa/skill_templates/kensa-inspect/: SKILL.md
src/kensa/skill_templates/kensa-setup/: SKILL.md
tests/: conftest.py  test_cli.py  test_cli_dotenv.py  test_cli_inspect.py  test_config.py  test_conversation.py  test_coverage_contracts.py  test_instrumentation.py  test_langfuse_provider.py  test_llm.py  test_pytest_api.py  test_redact.py  test_scoring.py  test_trace_and_judge.py  test_traces_import.py  test_watchdog.py
tests/fixtures/traces/: langfuse_export.json  local_kensa.jsonl
tests/integration/: live_llm_support.py  test_live_llm.py  test_live_redaction.py  test_live_simulator.py  test_live_trace_import_contracts.py
