[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kensa"
version = "0.9.0"
description = "Pytest-native evals harness for agent regression tests"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "satyaborg", email = "satya@kensa.sh" }]
keywords = ["pytest", "agents", "evals", "regression", "opentelemetry"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Testing",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = [
  "any-llm-sdk>=1.15.0",
  "click>=8.4.2,<9",
  "opentelemetry-api>=1.42.1",
  "opentelemetry-sdk>=1.43.0",
  "pydantic>=2.0",
  "pytest>=8.0",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "rich>=15.0.0",
]

[project.urls]
Homepage = "https://github.com/kensa-sh/kensa"
Repository = "https://github.com/kensa-sh/kensa"
Issues = "https://github.com/kensa-sh/kensa/issues"
Changelog = "https://github.com/kensa-sh/kensa/releases"

[project.scripts]
kensa = "kensa.cli:main"

[project.entry-points.pytest11]
kensa = "kensa.pytest_plugin"

[project.optional-dependencies]
redaction = [
  "detect-secrets==1.5.0",
  "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
  "presidio-analyzer==2.2.362",
  "spacy>=3.8,<3.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kensa"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
only-include = [
  "src/kensa",
  "tests",
  "README.md",
  "LICENSE",
  "pyproject.toml",
  "CODE_OF_CONDUCT.md",
  "CONTRIBUTING.md",
  "SECURITY.md",
]

[tool.ty.environment]
python-version = "3.11"
python = ".venv"

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.rules]
all = "error"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
markers = [
  "anthropic: live Anthropic provider integration tests",
  "kensa(trials=N): mark a pytest Kensa eval",
  "live: opt-in tests that call external services",
  "openai: live OpenAI provider integration tests",
]

[tool.coverage.run]
source = ["src/kensa"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "PT", "PIE", "C4", "RET", "PERF"]

[tool.ruff.lint.isort]
known-first-party = ["kensa"]

[dependency-groups]
dev = [
    "build>=1.3",
    "coverage>=7.15.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
    "ty>=0.0.40",
]
